# rpg-text-game

./: CMakeLists.txt  README.md  game  includes.h  main  main.cpp
include/: EquipmentMenu.hpp  ExitingMenu.hpp  GameState.hpp  HeaderDisplayer.hpp  Human.hpp  InteractionWithNPC.hpp  Item.hpp  LivingBeing.hpp  LoadingMenu.hpp  Location.hpp  LocationChooser.hpp  MainMenu.hpp  Menu.hpp  NPC.hpp  NPCTrade.hpp  Player.hpp  SavingMenu.hpp  ScreenStuff.hpp  TopBar.hpp  creature.h  equipment.h  game_state.h  item.h  load.h  location.h  main_menu.h  point_player.h  screen_stuff.h
include/creature/: npc.h  player.h  skeleton.h  thug.h  wolf.h
include/item/: armor.h  chapel_key.h  clothes.h  food.h  leather.h  meat.h  weapon.h
include/location/: AltarOfLastResort.hpp  AltarOfLastResortSuccess.hpp  Altars.hpp  ApproachingBridge.hpp  ApproachingChapel.hpp  ApproachingChapelSuccess.hpp  Attack.hpp  (+117 more)
includes/: creature.h  equipment.h  exploration.h  game_state.h  item.h  location.h  main_menu.h  navigation.h  point_equipment.h  point_player.h
resources/: items.json  locations.json  npcs.json
src/: EquipmentMenu.cpp  ExitingMenu.cpp  GameState.cpp  HeaderDisplayer.cpp  Human.cpp  InteractionWithNPC.cpp  Item.cpp  LivingBeing.cpp  Load.cpp  LoadingMenu.cpp  Location.cpp  LocationChooser.cpp  MainMenu.cpp  Menu.cpp  NPC.cpp  NPCTrade.cpp  Player.cpp  SavingMenu.cpp  ScreenStuff.cpp  TopBar.cpp  creature.cpp  equipment.cpp  exploration.cpp  game_state.cpp  item.cpp  load.cpp  location.cpp  main_menu.cpp  navigation.cpp  point_equipment.cpp  point_player.cpp  screen_stuff.cpp
(+198 files in other folders)
